src/main/java/com/example/bookclub/errors/UserEmailDuplicatedException.java
package com.example.bookclub.errors;

public class UserEmailDuplicatedException extends RuntimeException {
    public UserEmailDuplicatedException(String email) {
        super("Email is already existed: " + email);
    }
}
